fix collapsing overflow bug

--- a/tablepress-carousel.less
+++ b/tablepress-carousel.less
@@ -40,11 +40,12 @@
 
 .table-carousel {
   table-layout: fixed;
-
-  th, td {
-    box-sizing: border-box;
+  empty-cells:show;
+  border-collapse: collapse;
+  
+  th {
+    overflow: hidden;
   }
-
   .carousel-hidden {
     padding: 0;
     margin: 0;
